# RT-Vortex

./: .gitattributes  .gitignore  Makefile  README.md
.github/workflows/: ci.yml  engine.yml  publish-cli.yml  publish-java-sdk.yml  publish-node-sdk.yml  publish-python-sdk.yml  release.yml  server.yml
docs/: architecture.md  go-server-architecture.md  sandbox-builder.md  setup.md  swam-agent-plan.md
mono/: .editorconfig  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  SECURITY.md  build.gradle  gradlew  gradlew.bat  settings.gradle
mono/build-logic/: build.gradle
mono/cli/: README.md  pyproject.toml
mono/cli/aipr/: main.py
mono/cli/src/rtvortex_cli/: __init__.py  client.py  config.py  formatters.py  main.py
mono/cli/tests/: conftest.py  test_client.py  test_commands.py  test_config.py  test_formatters.py
mono/config/: default.yml  large-repo.yml  perf-focused.yml  props.xml  rtserverprops.xml  strict-security.yml  vcsplatforms.xml
mono/config/certificates/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
mono/config/model-providers/: custom-http.yml  local-llama.yml  ollama.yml  openai-compatible.yml
mono/deploy/: install.sh
mono/deploy/docker/: Dockerfile  Dockerfile.engine  docker-compose.yml  entrypoint.sh  nginx.conf  prometheus.yml
mono/deploy/launchd/: ai.auralith.aipr-engine.plist  ai.auralith.aipr-server.plist
mono/deploy/systemd/: aipr-engine.service  aipr-server.service
mono/deploy/windows/: aipr-server-service.xml  installer.nsi
mono/engine/: .clang-format  CMakeLists.txt  rtvortex.rc
mono/engine/cmake/: aipr-engine-config.cmake.in
mono/engine/examples/: tms_demo.cpp
mono/engine/include/: chunk_prefixer.h  config_validator.h  engine_api.h  faiss_index.h  hierarchy_builder.h  indexer.h  knowledge_graph.h  logging.h  memory_system.h  merkle_cache.h  metrics.h  perf_timer.h  redis_embed_cache.h  retriever.h  review_signals.h  splash_screen.h  storage_backend.h  storage_migration.h  types.h  version.h.in
mono/engine/include/tms/: compute_controller.h  cross_memory_attention.h  embedding_engine.h  graph_rag.h  ltm_faiss.h  memory_accounts.h  mtm_graph.h  multi_vector_index.h  multimodal_embedder.h  repo_parser.h  stm.h  tms_memory_system.h  tms_types.h
mono/engine/src/: engine.cpp
mono/engine/src/cache/: merkle_cache.cpp  redis_embed_cache.cpp
mono/engine/src/graph/: knowledge_graph.cpp
mono/engine/src/indexing/: chunk_prefixer.cpp  chunker_ast.cpp  chunker_fallback.cpp  embed_client.cpp  hierarchy_builder.cpp  language_detect.cpp  manifest.cpp  repo_scanner.cpp
mono/engine/src/memory/: cross_memory_attention.cpp  long_term_memory.cpp  memory_system.cpp  meta_task_memory.cpp  short_term_memory.cpp
mono/engine/src/retrieval/: graph_index.cpp  lexical_index.cpp  ranker.cpp  vector_index.cpp
mono/engine/src/review/: context_builder.cpp  diff_parser.cpp  heuristics.cpp  touched_symbols.cpp
mono/engine/src/server/: cross_repo_service_impl.cpp  cross_repo_service_impl.h  engine_service_impl.cpp  engine_service_impl.h  main.cpp
mono/engine/src/storage/: cloud_storage.cpp  local_storage.cpp  migration.cpp
mono/engine/src/tms/core/: compute_controller.cpp  cross_memory_attention.cpp  ltm_faiss.cpp  memory_accounts.cpp  mtm_graph.cpp  stm.cpp  tms_memory_system.cpp
mono/engine/src/tms/ingestion/: embedding_engine.cpp  multimodal_embedder.cpp  repo_parser.cpp
mono/engine/src/tms/retrieval/: graph_rag.cpp  multi_vector_index.cpp
mono/engine/src/util/: config_validator.cpp  fs.cpp  hashing.cpp  json.cpp  metrics.cpp  perf_timer.cpp
mono/engine/tests/: CMakeLists.txt  test_chunk_prefixer.cpp  test_graph_rag.cpp  test_heuristics.cpp  test_hierarchy_builder.cpp  test_indexer.cpp  test_knowledge_graph.cpp  test_main.cpp  test_memory_accounts.cpp  test_merkle_cache.cpp  test_multi_vector_index.cpp  test_parser.cpp  test_repo_type.cpp  test_retriever.cpp
mono/engine/tools/: aipr-engine-bench.cpp  aipr-engine-doctor.cpp
mono/evals/: README.md  pyproject.toml
mono/evals/configs/: default.yaml
mono/evals/datasets/benchmark/: benchmark_suite.json
mono/evals/datasets/performance/: performance_tests.json
mono/evals/datasets/security/: security_tests.json
mono/evals/scripts/: __init__.py  metrics.py  report.py  run_eval.py
mono/gradle/: libs.versions.toml
mono/infrastructure_src/: README.md
mono/prompting/: output_json.md  rubric.md  system.md
mono/proto/: api.proto  engine.proto  session.proto
mono/proto-java/: build.gradle
mono/schemas/: config.schema.json  index_job.schema.json  integration_event.schema.json  review_request.schema.json  review_result.schema.json
mono/scripts/: generate-certs.bat  generate-certs.sh  setup.ps1  setup.sh
mono/sdks/python/: README.md  pyproject.toml  ruff.toml
mono/sdks/python/src/aipr_sdk/: __init__.py  client.py  exceptions.py  models.py
mono/sdks/python/src/rtvortex_sdk/: __init__.py  client.py  exceptions.py  models.py  streaming.py
mono/sdks/python/tests/: conftest.py  test_client.py  test_exceptions.py  test_models.py  test_streaming.py
mono/server/: build.gradle
mono/server-go/: Dockerfile  Makefile  go.mod  go.sum
mono/swarm/: __init__.py  agents_config.py  auth.py  complexity.py  consensus.py  conversation.py  engine_client.py  go_client.py  main.py  memory.py  models.py  observability.py  probe_tuning.py  pyproject.toml  redis_consumer.py  self_heal.py  workspace.py
mono/swarm/agents/: __init__.py  architect.py  builder.py  docs.py  junior_dev.py  ops.py  orchestrator.py  qa.py  security.py  senior_dev.py  ui_ux.py
mono/swarm/proto/: __init__.py  engine_pb2.py  engine_pb2_grpc.py
mono/swarm/sdk/: __init__.py  agent.py  go_llm_client.py  loop.py  tool.py
mono/swarm/tests/: test_consensus.py  test_discussion.py  test_llm_probe.py
mono/swarm/tools/: engine_tools.py  extended_tools.py  mcp_tools.py  multimodal_tools.py  task_tools.py  workspace_tools.py
mono/web/: .dockerignore  .env.example  Dockerfile  next.config.ts  nginx-static.conf  package-lock.json  package.json  udo -u postgres psql -d rtvortex -c \dt  vitest.config.mts
(+639 files in other folders)
