[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtvortex-cli"
dynamic = ["version"]
description = "RTVortex CLI — AI-powered code review from your terminal"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Auralith AI", email = "team@auralith.ai" }]
keywords = ["ai", "code-review", "cli", "pull-request", "devops", "rtvortex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
rtvortex = "rtvortex_cli.main:cli"

[project.urls]
Homepage = "https://github.com/AuralithAI/RT-AI-PR-Reviewer"
Repository = "https://github.com/AuralithAI/RT-AI-PR-Reviewer"
Issues = "https://github.com/AuralithAI/RT-AI-PR-Reviewer/issues"

[tool.hatch.version]
path = "src/rtvortex_cli/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/rtvortex_cli/"]

[tool.hatch.build.targets.wheel]
packages = ["src/rtvortex_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
